# SkywardSwordPlugin

./: .gitmodules  .travis.yml  CMakeLists.txt  SkywardSwordPlugin.pro
Plugin/: Plugin.pro
Plugin/include/: Common.hpp  ImportExportQuestDialog.hpp  SaveInfoDialog.hpp  SettingsDialog.hpp  SettingsManager.hpp  SkipDatabaseElementEditor.hpp  SkipDatabaseWidget.hpp  SkywardSwordEditorForm.hpp  SkywardSwordGameDocument.hpp  SkywardSwordGameFile.hpp  SkywardSwordPlugin.hpp  SkywardSwordQuestEditorForm.hpp  SkywardSwordTabWidget.hpp  SkywardSwordWidget.hpp  WiiSaveLoaderThread.hpp
Plugin/resources/: resources.qrc
Plugin/src/: Common.cpp  CopyWidget.cpp  ImportExportQuestDialog.cpp  PlaytimeWidget.cpp  SaveInfoDialog.cpp  SettingsDialog.cpp  SettingsManager.cpp  SkipDatabaseElementEditor.cpp  SkipDatabaseWidget.cpp  SkywardSwordEditorForm.cpp  SkywardSwordGameDocument.cpp  SkywardSwordGameFile.cpp  SkywardSwordPlugin.cpp  SkywardSwordQuestEditorForm.cpp  SkywardSwordTabWidget.cpp  SkywardSwordWidget.cpp  UpdateDialog.cpp  WiiSaveLoaderThread.cpp
Plugin/ui/: CopyWidget.ui  ImportExportQuestDialog.ui  PlaytimeWidget.ui  SaveInfoDialog.ui  SettingsDialog.ui  SkipDatabaseElementEditor.ui  SkipDatabaseWidget.ui  SkywardSwordEditorForm.ui  SkywardSwordWidget.ui  UpdateDialog.ui
SkywardSwordPlugin/include/: PlaytimeWidget.hpp  SettingsManager.hpp
SkywardSwordPlugin/src/: PlaytimeWidget.cpp  SettingsManager.cpp
SkywardSwordPlugin/ui/: PlaytimeWidget.ui
